fix(storage): durably commit persistent S3 writes before acknowledgement